feedback: Fix unnecessary scrollbar in rtl mode
Unnecessary scrollbar was due to assuming that placing the off-screen
textarea to the very left would hide it, but in rtl mode it was treated
as reachable by horizontal scrollbar.

This changes the off-screen placement to the very top instead of very
left.

Bug: 1295141
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3448935
Commit-Queue: Sonny Sasaka <sonnysasaka@chromium.org>
Cr-Commit-Position: refs/heads/main@{#968989}

--- a/chrome/browser/resources/feedback_webui/css/feedback.css
+++ b/chrome/browser/resources/feedback_webui/css/feedback.css
@@ -258,10 +258,9 @@ button.blue-button {
 /* Used for elements that are hidden but not ignored by screen reader. */
 .off-screen {
   height: 1px;
-  left: -10000px;
   overflow: hidden;
   position: absolute;
-  top: auto;
+  top: -1000px;
   width: 1px;
 }
 
